--- a/src/components/login&signup/logo/logo.css
+++ b/src/components/login&signup/logo/logo.css
@@ -1,8 +1,16 @@
 #Logo {
-    width: 46.8125rem;
+    width: 45rem;
+
+    padding: 5rem;
+    margin: auto;
+
+    /* display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: center; */
 
     color: var(--primary, #307DD8);
-    font-family: "Dirtyline 36Daysoftype 2022";
+    font-family: "Dirtyline 36daysoftype 2022";
     font-size: 11.25rem;
     font-style: normal;
     font-weight: 400;
