ADD :: 마크업 문법 빼고 글 작성 페이지 완료

--- a/src/components/blog/footer/footer.css
+++ b/src/components/blog/footer/footer.css
@@ -4,11 +4,11 @@
 }
 
 #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: calc(100vw - 8rem);
     height: 4rem;
-
+    
     gap: 1.25rem;
 
     display: flex;
