--- a/src/pages/blog/blogwrite.css
+++ b/src/pages/blog/blogwrite.css
@@ -1,6 +1,7 @@
 #blogwrite {
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
+    padding: 0 0 5rem 0;
 }
 
 #blogwrite section {
@@ -9,7 +10,7 @@
     z-index: 0;
 
     width: 100vw;
-    height: calc(100vh - 9.6rem);
+    height: fit-content;
 
     display: flex;
     flex-direction: column;
@@ -30,6 +31,7 @@
     font-weight: 600;
     line-height: 120%; /* 4.2rem */
     letter-spacing: -0.105rem;
+    word-wrap: break-word;
 
     border: none;
     outline: none;
@@ -49,8 +51,7 @@
 
 #blogwrite section .contents {
     width: 82rem;
-    height: 100rem;
-    max-height: fit-content;
+    min-height: 40rem;
 
     color: var(--gray-300, #000);
 
@@ -61,9 +62,11 @@
     font-weight: 400;
     line-height: 160%; /* 2rem */
     letter-spacing: 0.0125rem;
+    word-wrap: break-word;
 
     border: none;
     outline: none;
+    resize: none;
 }
 
 #blogwrite section .contents::placeholder {
