--- a/src/components/blog/header/header.css
+++ b/src/components/blog/header/header.css
@@ -14,3 +14,60 @@
     height: 3rem;
     flex-shrink: 0;
 }
+
+#header .btnBox {
+    margin: 0 0 0 auto;
+
+    height: 2.5rem;
+    display: flex;
+    gap: 1.5rem;
+
+    align-items: center;
+    justify-items: center;
+}
+
+#header .logoutBtn {
+    display: flex;
+    width: 7.75rem;
+    height: 2.5rem;
+    padding: 0.438rem 1.5rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    flex-shrink: 0;
+
+    border: 1px solid var(--gray-300, #CCC);
+
+    color: var(--gray-600, #848484);
+
+    /* text/2 */
+    font-family: SUIT;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 160%; /* 1.6rem */
+    letter-spacing: -0.03rem;
+}
+
+#header .writeBtn {
+    display: inline-flex;
+    width: 7.75rem;
+    height: 2.5rem;
+    padding: 0.5rem 1.5rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    flex-shrink: 0;
+
+    background: var(--primary, #307DD8);
+
+    color: #FFF;
+
+    /* text/2 */
+    font-family: SUIT;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 160%; /* 1.6rem */
+    letter-spacing: -0.03rem;
+}
